force-app/main/default/objects/GL_Reconciliation__c/GL_Reconciliation__c.object-meta.xml
<CustomObject>
    <label>GL Reconciliation</label>
    <nameField>
        <displayFormat>GLR-{00000000}</displayFormat>
        <label>GL Reconciliation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>