force-app/main/default/objects/GL_Reconciliation__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GL_Reconciliation_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>