force-app/main/default/objects/GL_Reconciliation__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Reconciliations</relationshipLabel>
    <relationshipName>GL_Reconciliations</relationshipName>
    <type>Lookup</type>
</CustomField>