force-app/main/default/objects/GL_Reconciliation__c/fields/Reconciliation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reconciliation Date</label>
    <type>Date</type>
</CustomField>