force-app/main/default/objects/GL_Reconciliation__c/listViews/My_Open_GL_Reconciliations.listView-meta.xml
<ListView>
    <fullName>My_Open_GL_Reconciliations</fullName>
    <columns>NAME</columns>
    <columns>Financial_Account__c</columns>
    <columns>Reconciliation_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Approver__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <label>My Open GL Reconciliations</label>
</ListView>